--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/router": "^20.0.6",
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/postcss": "^4.1.10",
+    "chart.js": "^4.5.0",
+    "mapbox-gl": "^3.13.0",
+    "ng2-charts": "^8.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.10",
