added script to generate environments

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "prebuild": "node ./scripts/create-env-files.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -22,6 +23,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/postcss": "^4.1.10",
     "chart.js": "^4.5.0",
+    "dot-env": "^0.0.1",
     "mapbox-gl": "^3.13.0",
     "ng2-charts": "^8.0.0",
     "postcss": "^8.5.6",
