--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/postcss": "^4.1.10",
     "chart.js": "^4.5.0",
-    "dot-env": "^0.0.1",
+    "dotenv": "^17.2.0",
     "mapbox-gl": "^3.13.0",
     "ng2-charts": "^8.0.0",
     "postcss": "^8.5.6",
