--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node -r dotenv/config mynode.js && ng serve",
-    "build": "ng build",
+    "build": "node mynode.js && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
